// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with arialabel 1`] = `
<button
  aria-label="this is a button"
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with children DocumentIcon 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
>
  <svg
    aria-hidden="true"
    className="w-5 h-5"
    fill="none"
    stroke="currentColor"
    strokeWidth={2}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </svg>
</button>
`;

exports[`should render with children Text 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
>
  Text
</button>
`;

exports[`should render with className which makes the colour of the text red 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg text-red-50"
  disabled={false}
  type="button"
/>
`;

exports[`should render with default 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with disabled false 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with disabled false 2`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  onClick={[Function]}
  type="button"
/>
`;

exports[`should render with disabled true 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg disabled:cursor-default"
  disabled={true}
  type="button"
/>
`;

exports[`should render with outline 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow border border-primary-dark disabled:border-primary-20 text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with rounded full 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-full p-2"
  disabled={false}
  type="button"
/>
`;

exports[`should render with rounded lg 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with rounded md 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-md"
  disabled={false}
  type="button"
/>
`;

exports[`should render with rounded none 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-none"
  disabled={false}
  type="button"
/>
`;

exports[`should render with rounded sm 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-sm"
  disabled={false}
  type="button"
/>
`;

exports[`should render with size base 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with size icon 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow p-2 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with size lg 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-xl py-3 px-6 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with size md 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-lg py-2.5 px-5 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with size sm 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with tabIndex 0 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  tabIndex="0"
  type="button"
/>
`;

exports[`should render with type button 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with type reset 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="reset"
/>
`;

exports[`should render with type submit 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="submit"
/>
`;

exports[`should render with variant primary 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with variant secondary 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-gray-40 active:text-gray-100 text-gray-90 hover:bg-gray-10 active:bg-gray-20 disabled:bg-gray-10 bg-white shadow border-gray-50 text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render with variant tertiary 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-30 hover:text-primary-blue text-primary-light hover:bg-primary-10 active:bg-primary-20 disabled:bg-white bg-white disabled:border-primary-20 text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;

exports[`should render without outline 1`] = `
<button
  className="font-ibm inline-flex items-center font-medium capitalize whitespace-nowrap justify-center focus:outline-none focus:ring-4 focus:ring-offset-0 focus:ring-primary-30 disabled:text-primary-20 text-white hover:bg-primary-blue active:bg-primary-dark disabled:bg-primary-10 bg-primary-light shadow text-sm py-2 px-4 rounded-lg"
  disabled={false}
  type="button"
/>
`;
